public/index.css
.nav-logo {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: white;
}

.nav-links {
  padding: 12px 180px;
  background: #56009b;
  color: white;
  list-style: none;
  display: flex;
  justify-content: space-around;
  margin: 0;
}

.nav-link {
  color: white;
  text-decoration: none;
  border-radius: 18px;
  padding: 6px 24px;
  font-size: 18px;
}

.nav-link-active {
  background: #320059;
}

.pet-type-label {
  text-transform: capitalize;
}

.grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  grid-gap: 40px 8px;
  justify-items: center;
  width: 100%;
  padding: 0 32px;
}

.pet-image-container {
  height: 200px;
  width: 200px;
  overflow: hidden;
  border-radius: 4px;
}

.pet-image {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.pet {
  text-decoration: none !important;
  color: black;
}

.pet p {
  margin: 0;
}

.page h3 {
  text-align: center;
  font-size: 30px;
  font-weight: bold;
  color: #56009b;
  margin: 40px 0 35px 0;
}

.page img {
  margin: 0 auto;
  display: block;
}

.pet-detail {
  display: flex;
  width: 100%;
  gap: 24px;
  padding: 32px;
}

.pet-detail h1 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 30px;
  font-weight: bold;
  color: #000000;
}

.pet-detail h3 {
  font-size: 18px;
  font-weight: bold;
  margin: 0;
  margin-top: 18px;
  margin-bottom: 8px;
}

.pet-detail p {
  font-size: 16px;
  margin: 0;
  margin-bottom: 8px;
}

.hero-container {
  width: 100%;
  height: 370px;
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
  font-size: 2em;
}

.hero-container,
h2 {
  font-size: 40px;
  font-weight: bold;
}

.nav-logo {
  padding: 18px 60px;
}

html,
body {
  margin: 0;
}

* {
  box-sizing: border-box;
  font-family: 'Open Sans', sans-serif;
}

.pet h3 {
  text-align: left;
  margin-top: 8px;
  margin-bottom: 8px;
  font-size: 20px;
  font-weight: bold;
  color: #000000;
}

.pet p {
  font-size: 14px;
  margin-bottom: 4px;
  margin-top: 0;
}

.prompt {
  text-align: center;
}

.search {
  border-radius: 24px;
  border: 1px solid #a9a9a9;
  font-size: 14px;
  padding: 4px 8px;
}

.search-button {
  height: 24px;
  width: 24px;
  display: flex;
  align-items: center;
  justify-content: center;
  border: none;
  background: transparent;
  border-radius: 50%;
  cursor: pointer;
  font-size: 12px;
  transition: background-color 0.1s ease-in;
}

.search-button:hover,
.search-button:focus {
  background-color: #eaeaea;
}

.search-form {
  display: flex;
  column-gap: 8px;
  align-items: center;
}

.button {
  background: #56009b;
  color: white;
  font-size: 14px;
  border: none;
  border-radius: 30px;
  padding: 8px 16px;
  text-decoration: none;
}

.actions-container {
  display: flex;
  column-gap: 12px;
  justify-content: center;
  padding: 32px 0;
}

